--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <h2>CAREER OBJECTIVE</h2>
   <p>to be in a place which is filled with joyfullness,enjoyment and self satisfaction.</p>
   <h2>CONTACT ME</h2>
-  <p>ph no:8500754244<br>ph no:9160044161<br>email:manojsaibellamkonda@gmail.com<br>1-5,appikatla,guntur dt,ap-522310</p>
+  <p>ph no:8500754244<br>ph no:9160044161<br>email:manojsaibellamkonda@gmail<br>.com<br>1-5,appikatla,guntur dt,ap-522310</p>
   <h2>FOLLOW ME</h2>
   <p>fb:manojsai bellamkonda<br>insta:b_manoj_sai</p>
   <h2>PERSONAL INFO</h2>
